debug progress bar

--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -33,7 +33,7 @@
 
         @media (min-width: 992px) {
             .project-progress .line-100:after {
-                height: calc({% project_progress  project_pk %}% + 6%);
+                height: calc({% project_progress  project_pk %}% + 5%);
             }
 
             .project-progress .step-container:nth-child(2) {
@@ -239,9 +239,7 @@
                                                                     توضیح و اهمیت آن را
                                                                     تبیین کنید.
                                                                 </div>
-                                                                <div class="answer">
-                                                                    {{ projectForm.main_problem_and_importance }}
-                                                                </div>
+                                                                <div class="answer">{{ projectForm.main_problem_and_importance }}</div>
                                                             </div>
                                                             <div>
                                                                 <div class="question">
@@ -254,9 +252,7 @@
                                                                     خدمات
                                                                     درمانی یا ... حاصل می شود؟
                                                                 </div>
-                                                                <div class="answer">
-                                                                    {{ projectForm.progress_profitability }}
-                                                                </div>
+                                                                <div class="answer">{{ projectForm.progress_profitability }}</div>
                                                             </div>
                                                             {% comment %} <div>
                                                                             <div class="question">
@@ -290,8 +286,13 @@
                                                                     {% for researcher in researcher_accepted %}
                                                                         <div class="item">
                                                                             <div class="avatar-item">
-                                                                                <img src="/media/{{ researcher.photo }}"
-                                                                                     alt="{{ researcher.fullname }}پروفایل ">
+                                                                                {% if researcher.photo %}
+                                                                                    <img src="/media/{{ researcher.photo }}"
+                                                                                         alt="{{ researcher.fullname }}پروفایل ">
+                                                                                {% else %}
+                                                                                    <img src="{% static 'industry/img/profile.jpg' %}"
+                                                                                         alt="{{ researcher.fullname }}پروفایل ">
+                                                                                {% endif %}
                                                                                 <div class="info">
                                                                                     <h3>{{ researcher.fullname }}</h3>
                                                                                     <button value="{{ project_pk }}"
