add english title to project management

--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -72,6 +72,7 @@
                     <div class="row mbottom-lg-25 d-block d-lg-none ">
                         <div class="col-lg-12 text-right">
                             <h6>پروژه <span>{{ title }}</span></h6>
+                            <h6>{{ eng_title }}</h6>
                         </div>
                     </div>
                     <div class="row" style="direction: ltr!important">
@@ -124,6 +125,7 @@
                             <div class="row mbottom-lg-25 d-none d-lg-block ">
                                 <div class="col-lg-12 text-right">
                                     <h6>پروژه <span>{{ title }}</span></h6>
+                                    <h6>{{ eng_title }}</h6>
                                 </div>
                             </div>
                             <div class="row mbottom-lg-25">
