--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -73,6 +73,7 @@
                     <div class="row mbottom-lg-25 d-block d-lg-none ">
                         <div class="col-lg-12 text-right">
                             <h6>پروژه <span>{{ title }}</span></h6>
+                            <h6>{{ eng_title }}</h6>
                         </div>
                     </div>
                     <div class="row" style="direction: ltr!important">
@@ -125,6 +126,7 @@
                             <div class="row mbottom-lg-25 d-none d-lg-block ">
                                 <div class="col-lg-12 text-right">
                                     <h6>پروژه <span>{{ title }}</span></h6>
+                                    <h6>{{ eng_title }}</h6>
                                 </div>
                             </div>
                             <div class="row mbottom-lg-25">
