put last expert and last techniques when project_setting.html load

--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -9,8 +9,7 @@
                     <span aria-hidden="true"></span>
                 </button>
             </div>
-            <form id="ajax-project-setting" action="{% url 'industry:project-setting' %}"
-                  data-url="{% url 'expert:show-technique' %}">
+            <form id="ajax-project-setting" action="{% url 'industry:project-setting' %}">
                 <div class="modal-body">
 
                     <div class="divide__line text-right mb-4">
