fixed project setting

--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -84,7 +84,7 @@
                         <div class="col-md-10">
                             <div class="form-group form-check mb-0">
                                 <input type="checkbox" class="form-check-input inp-cbx" id="autoAddProject"
-                                       name="autoAddProject" value=1 hidden checked>
+                                       name="requestResearcher" value=1 hidden checked>
                                     <label class="form-check-label cbx mb-0" for="autoAddProject">
                                         <span class="mt-2">
                                             <svg class="inline-svg bi bi-check2" viewBox="0 0 16 16"
