add first expert to project model

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -143,7 +143,7 @@
                                                 <div class="label">استاد</div>
                                                 <div class="value">
                                                     {% if project.expert_accepted %}
-                                                        <span>{{ project.expert_accepted.expertform }}</span>
+                                                        <span>{{ project.firstExpert.expertform }}</span>
                                                     {% else %}
                                                         <span>نامشخص</span>
                                                     {% endif %}
