show all item in expert resume

--- a/industry/templates/industry/layouts/expertResume.html
+++ b/industry/templates/industry/layouts/expertResume.html
@@ -154,34 +154,34 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="divide__line text-right mbottom-lg-25 d-none">
+                        <div class="divide__line text-right mbottom-lg-25 optional-part d-none">
                             <span class="w__title">سایر موارد</span>
                             <span class="__line"></span>
                         </div>
-                        <div class="row d-none">
+                        <div class="row d-none optional-part">
                             <div class="col-12">
                                 <ul class="tick-ul">
-                                    <li>
+                                    <li class="d-none">
                                         <div class="text-right">
                                             <div dir="ltr">:افتخارات</div>
-                                            <div class="awards"></div>
+                                            <div class="awards answer"></div>
                                         </div>
                                     </li>
-                                    <li>
+                                    <li class="d-none">
                                         <div class="researcher-num text-right">
                                             <span dir="ltr">،درحال حاضر</span>
                                             <span class="researcher_count"></span>
                                             <span> زیر نظر این استاد در حال انجام کار پژوهشی هستند.</span>
                                         </div>
                                     </li>
-                                    <li>
+                                    <li class="d-none">
                                         <div class="out-college-research text-right">
                                             <span>این استاد تجربه کار با شرکت های خارج دانشگاه را</span>
                                             <span class="has_industrial_research">داشته</span>
                                             <span> است.</span>
                                         </div>
                                     </li>
-                                    <li>
+                                    <li class="d-none">
                                         <div class="foreign-lang text-right">
                                             <span>زبان های خارجی:</span>
                                             <div class="row B-g languages">
