--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -21,7 +21,7 @@
                         <div class="col-md-1 d-md-block d-none"></div>
                         <div class="col-md-10">
                             <div class="form-group">
-                                <label for="searchExpert">نام/id استاد</label>
+                                <label for="searchExpert">نام/شناسه استاد</label>
                                 <div>
                                     <input type="text" class="w-100 auto-complete-input" id="searchExpert"
                                            name="search_expert">
