industry send comment to researcher

--- a/industry/templates/industry/layouts/researcher_info.html
+++ b/industry/templates/industry/layouts/researcher_info.html
@@ -166,7 +166,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-right">
                         <div class="status" status="researcher">
-                            {% include 'expert/layouts/comment.html' %}
+                            {% include 'industry/layouts/comment.html' %}
                         </div>
                     </div>
                 </div>
